# flights-price-prediction-mlops

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  data.dvc  docker-entrypoint.sh  dvc.yaml  environment.yaml  index.html  logging.yaml  mkdocs.yml  params.yaml  pyproject.toml  raw_final_shap_local_instances.csv  requirements.txt  sitemap.xml  tag_push_event.json  tuning.yaml
.dvc/: config
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  deploy_docs.yml
API/api_reference/: index.html
CI/ci/: index.html
Data Pipelines/bronze_pipeline/: index.html
Data Pipelines/data_pipelines/: index.html
Data Pipelines/gold_pipeline/: index.html
EDA/utils/__init__/: index.html
EDA/utils/data_splitting/: index.html
EDA/utils/data_utils/: index.html
EDA/utils/plots_utils/: index.html
LGBM_summary/LGBMR_production_model_details/: index.html
MLOps/docker/: index.html
MLOps/dvc/: index.html
MLOps/mlflow/: index.html
Modeling/model_explainability_lgbm_champ/: index.html
Modeling/model_selection_report/: index.html
Modeling/tuning_pipeline/: index.html
Notebooks/: flights_eda.ipynb
Notebooks/utils/: data_splitting.py
Testing/testing_strategy/: index.html
airflow/: Dockerfile  docker-compose.yaml  requirements.airflow.txt  requirements.txt
airflow/dags/: data_pipeline_dag.py
data/: .gitignore  archieve.dvc
data/_initial_data_splits/drift_simulation_data/: flights_2022-03.csv  flights_2022-04.csv  flights_2022-09.csv  flights_2023-01.csv  flights_2023-04.csv
data/bronze_data/: .gitignore  quarantine.dvc
data/gold_engineered_data/: .gitignore
data/prepared_data/drift_simulation_data/: flights_2022-06.csv  flights_2022-08.csv  flights_2022-10.csv  flights_2022-12.csv  flights_2023-02.csv  flights_2023-03.csv  flights_2023-05.csv  flights_2023-07.csv  future_data_chunk_1.csv  future_data_chunk_2.csv  future_data_chunk_3.csv  future_data_chunk_4.csv
data/raw/: .gitignore  flights.csv.dvc
data/raw/pending/: evaluation_holdout.csv  flights_2022-02.csv  flights_2022-05.csv  flights_2022-07.csv  (+2 more)
docs/: README.md  about.md  frontend.md  index.md  model_selection_report.md  quickstart.md  shap_local_instances.csv  shap_local_instances_unprocessed.csv
docs/API/: api_reference.md
docs/CD/: cd.md
docs/CI/: ci.md
docs/Data Pipelines/: bronze_pipeline.md  data_pipelines.md  gold_pipeline.md  silver_pipeline.md
docs/EDA/: flights_training_eda_report.html
docs/LGBM_summary/: LGBMR_production_model_details.md
docs/MLOps/: airflow.md  architecture.md  docker.md  dvc.md  dvc_pipeline.md  mlflow.md  tools.md
docs/Modeling/: model_explainability_lgbm_champ.md  model_explainability_lgbm_vs_xgb.md  model_selection_report.md  training_pipeline.md  tuning_pipeline.md
docs/Testing/: testing_strategy.md
frontend_streamlit/: app.py
img/Final_Lightgbm_Plots/: [test] Dependence Plot - agency.png:Zone.Identifier  [test] Dependence Plot - time.png:Zone.Identifier  [test] Feature Importance.png:Zone.Identifier  [test] Q-Q Plot of Residuals.png:Zone.Identifier  [test] SHAP Waterfall Plot for Instance 1.png:Zone.Identifier  [test] SHAP Waterfall Plot for Instance 2.png:Zone.Identifier  tmpp3rb3ieh.html:Zone.Identifier
models/: cardinality_reducer.joblib  categorical_encoder.joblib  missing_value_imputer.json  outlier_handler.joblib  power_transformer.joblib  rare_category_grouper.joblib  scaler.joblib  simple_imputer.json
quickstart/: index.html
reports/eda/: flights_eda_report.html
site/: Final_model_shap_local_instances.csv  shap_local_instances.csv  shap_local_instances_unprocessed.csv  sitemap.xml
site/EDA/: flights_training_eda_report.html
site/img/: shap_lgbm_force_plot.html  shap_xgbr_force_plot.html
site/search/: search_index.json
src/: config.py  data_validation.py
src/data_analysis/: data_analysis.ipynb  data_exploration.ipynb
src/data_exploration/: explore.ipynb
src/data_ingestion/: data_loader.py
src/data_preparation/: split_data.py
src/data_preprocessing/: data_preprocessing.py  data_split.py  silver_preprocessing.py
src/data_processing/: split_data.py
src/data_split/: split_data.py
src/data_validation/: actions.py  checkpoints.py  config.py  create_validation_definitions.py  expectations.py  expectations_suite.py  ge_components.py  great_expectations_components.py  load_data.py  run_checkpoints.py  run_expecations_suite.py  run_expectations_suite.py  run_validation_definition.py  utils.py  validation_definition.py  validation_definitions.py
src/gold_data_preprocessing/: categorical_encoder.py  data_cleaning.py  feature_engineering.py  gold_preprocessing.py  missing_value_imputer.py  outlier_handling.py  power_transformer.py  rare_category_grouper.py  scaler.py
src/hyperparameter_tuning/: tuning.py
src/model_evaluation/: evaluation.py  evaluation_plots.py
src/model_explainability/: shap_explain.py
src/model_training/: train.py
src/pipelines/: bronze_pipeline.py  gold_pipeline.py  hyper_tuning_pipeline.py  silver_pipeline.py  training_pipeline.py  tuning_pipeline.py
src/prediction_server/: Dockerfile  config_app.py  docker-entrypoint.sh  main.py  model_loader.py  predict.py  requirements.prod.txt  schemas.py
src/sandbox/: scratchpad.ipynb
src/shared/: config.py  utils.py
src/silver_data_preprocessing/: silver_preprocessing.py
tests/: conftest.py
tests/test_data_ingestion/: test_data_loader.py
tests/test_data_preprocessing/: test_silver_preprocessing.py
tests/test_data_split/: test_split_data.py
tests/test_gold_data_preprocessing/: test_categorical_encoder.py  test_data_cleaning.py  test_feature_engineering.py  test_missing_value_imputer.py  test_outlier_handling.py  test_power_transformer.py  test_rare_category_grouper.py  test_scaler.py
tests/test_hyperparameter_tuning/: test_tuning.py
tests/test_model_evaluation/: test_evaluate.py
tests/test_model_training/: test_train.py
tests/test_pipelines/: test_bronze_pipeline.py  test_silver_pipeline.py
tests/test_prediction_server/: test_predict.py
utils/: data_utils.py  plots_utils.py
(+80 files in other folders)
