# This file configures the Python project, its dependencies,
# and defines custom script commands.

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flight_price_prediction_mlops"
version = "0.1.0"
# readme = "README.md"  # Uncomment this if you have a README.md file
requires-python = ">=3.12"

# --- Core Dependencies ---
# These are the libraries required for project to run.
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "pyarrow",
    "great-expectations",
    "openpyxl",
    "dvc",
    "dvc-s3"
]

# if want to test code use pip install -e .[test]
[project.optional-dependencies]
test = ["pytest"]

# --- Setuptools Configuration ---
# This tells setuptools where to find the Python packages.
[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the 'src' directory

# --- Project URLs ---
[project.urls]
Homepage = "https://github.com/your_username/your_project" # Example URL
Issues = "https://github.com/your_username/your_project/issues" # Example URL

# --- Command-Line Scripts ---
# This section registers  pipeline scripts as runnable commands
# after installing the package (e.g., with `pip install -e .`).
[project.scripts]
run-bronze-pipeline = "pipelines.bronze_pipeline:main"
run-silver-pipeline = "pipelines.silver_pipeline:main"
run-gold-pipeline = "pipelines.gold_pipeline:main"


[tool.pytest.ini_options]
testpaths = ["tests"]